[package]
name = "mc-network-io"
version = "0.1.4"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "Minecraft network I/O layer"
repository = "https://github.com/Bruce0203/mc-network-io"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
derive_more = "0.99.17"

