[package]
name = "mc_io"
version = "0.1.12"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "Minecraft I/O layer"
repository = "https://github.com/Bruce0203/mc-io"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
derive_more = "0.99.17"
hematite-nbt = "0.5.2"
serde = "1.0.197"

